# advanced-mpr-viewer

./: .gitignore  AGENT_BRIEF.md  CMakeLists.txt  LICENSE  README.md  TASKS.md
docs/: BUILDING.md  FEATURES.md  USAGE.md
scripts/: build_windows_msvc.bat
shaders/: README.txt
src/: main.cpp  version.h.in
src/core/: DicomSeriesLoader.cpp  DicomSeriesLoader.h  DicomSeriesManager.cpp  DicomSeriesManager.h  Volume3D.h
src/ui/: MainWindow.cpp  MainWindow.h
